--- a/nexus/src/main/resources/templates/layout/AppLayout.html
+++ b/nexus/src/main/resources/templates/layout/AppLayout.html
@@ -32,17 +32,17 @@
 
                 </ul>
                 <ul class="navbar-nav justify-content-end">
-                    <li th:if="${session.USER != null}" class="nav-item">
-                        <span class="nav-link" th:text="${session.USER.userName}"></span>
+                    <li th:if="${sessionUser != null}" class="nav-item">
+                        <span class="nav-link" th:text="${sessionUser.userName}"></span>
                     </li>
                 </ul>
                 <ul class="navbar-nav justify-content-end">
 
-                    <li th:if="${session.USER != null}" class="nav-item">
+                    <li th:if="${sessionUser != null}" class="nav-item">
                         <a class="nav-link" href="/AppUser/Logout">Logout</a>
                     </li>
 
-                    <li th:if="${session.USER == null}" class="nav-item">
+                    <li th:if="${sessionUser == null}" class="nav-item">
                         <a class="nav-link" href="/AppUser/LoginForm">Login</a>
                     </li>
 
@@ -55,24 +55,24 @@
 
     <div style="display:block; width:100%; height:5em; padding-top:0.3em; padding-bottom:0.5em;">
         <center>
-            <span th:if="${session.ERROR_MSG != null}">
+            <span th:if="${errorMsg != null}">
                 <div id="errorMsgId" class="alert  alert-danger" role="alert" style="width: 60%;">
-                    <span th:text="${session.ERROR_MSG}"/>
+                    <span th:text="${errorMsg}"/>
                 </div>
             </span>
-            <span th:if="${session.WARN_MSG != null}">
+            <span th:if="${warnMsg != null}">
                 <div id="warnMsgId" class="alert alert-warning" role="alert" style="width: 60%;">
-                    <span th:text="${session.WARN_MSG}"/>
+                    <span th:text="${warnMsg}"/>
                 </div>
             </span>
-            <span th:if="${session.ACTION_MSG != null}">
+            <span th:if="${actionMsg != null}">
                 <div id="actionMsgId" class="alert alert-success" role="alert" style="width: 60%;">
-                    <span th:text="${session.ACTION_MSG}"/>
+                    <span th:text="${actionMsg}"/>
                 </div>
             </span>
         </center>
     </div>
-    <span th:text="${T(app.session.SessionUtil).cleanViewedMsgs(#session)}"></span>
+    <span th:text="${T(app.session.SessionUtil).cleanViewedMsgs(session1)}"></span>
     <script type="text/javascript" th:src="@{/js/app.js}"></script>
 </div>
 
