--- a/nexus/src/main/resources/static/css/app.css
+++ b/nexus/src/main/resources/static/css/app.css
@@ -1,7 +1,8 @@
 /* Body */
 body {
     /* background: linear-gradient(135deg, #f5f5f5, #e0e0e0); /* Neutral background for contrast */
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: sans-serif;
+    font-size: 15px;
 }
 
 /* Navbar */
@@ -31,13 +32,14 @@ body {
 }
 
 .custom-card:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover */
+    transform: translateY(-0.8px);
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2); /* Enhanced shadow on hover */
    /* background: linear-gradient(135deg, #e3f2fd, #bbdefb); /* Slightly darker hover gradient */
 }
 
 .custom-card .card-title h5 {
-    color: #1e88e5; /* Primary blue for the title */
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    color: #2e7d32; /* Primary blue for the title */
 }
 
 .custom-card:hover h5 {
@@ -73,8 +75,8 @@ body {
 
 /* Divider Styling */
 hr {
-    height: 1px;
+    height: 1.2px;
     border: none;
-    background: linear-gradient(to right, transparent, #1e88e5, transparent); /* Blue gradient divider */
+    background: linear-gradient(to right, yellow, #1e88e5, yellow);
     margin: 1rem auto;
 }
