--- a/nexus/src/main/resources/templates/app/user/Landing.html
+++ b/nexus/src/main/resources/templates/app/user/Landing.html
@@ -10,13 +10,13 @@
     <div class="row justify-content-center align-items-center w-100">
         <div class="col-3 d-flex justify-content-center">
 
-            <a href="/Autosys/Landing" class="card w-100 custom-card text-center mb-3 text-decoration-none">
+            <a href="/Topology/Landing" class="card w-100 custom-card text-center mb-3 text-decoration-none">
                 <div class="card-body">
                     <div class="card-title text-success">
-                        <h5 class="mb-0">Autosys Analysis</h5>
+                        <h5 class="mb-0">Service Topology Dashboard</h5>
                     </div>
                     <hr/>
-                    <p class="card-text">Analyze the Autosys definitions</p>
+                    <p class="card-text">Topology Monitoring</p>
                 </div>
             </a>
 
