Creating topology page

--- a/nexus/src/main/resources/templates/app/user/Landing.html
+++ b/nexus/src/main/resources/templates/app/user/Landing.html
@@ -12,8 +12,8 @@
 
             <a href="/Topology/Landing" class="card w-100 custom-card text-center mb-3 text-decoration-none">
                 <div class="card-body">
-                    <div class="card-title text-success">
-                        <h5 class="mb-0">Service Topology Dashboard</h5>
+                    <div class="card-title text-dark">
+                        <h5 class="mb-0 fw-semibold">Service Topology Dashboard</h5>
                     </div>
                     <hr/>
                     <p class="card-text">Topology Monitoring</p>
@@ -25,8 +25,8 @@
 
             <a href="/Autosys/Landing" class="card w-100 custom-card text-center mb-3 text-decoration-none">
                 <div class="card-body">
-                    <div class="card-title text-success">
-                        <h5 class="mb-0">Autosys Analysis</h5>
+                    <div class="card-title fw- text-dark">
+                        <h5 class="mb-0 fw-semibold">Autosys Analysis</h5>
                     </div>
                     <hr/>
                     <p class="card-text">Analyze the Autosys definitions</p>
@@ -38,8 +38,8 @@
 
             <a href="/Autosys/Landing" class="card w-100 custom-card text-center mb-3 text-decoration-none">
                 <div class="card-body">
-                    <div class="card-title text-success">
-                        <h5 class="mb-0">Autosys Analysis</h5>
+                    <div class="card-title text-dark">
+                        <h5 class="mb-0 fw-semibold">Autosys Analysis</h5>
                     </div>
                     <hr/>
                     <p class="card-text">Analyze the Autosys definitions</p>
@@ -51,8 +51,8 @@
 
             <a href="/Autosys/Landing" class="card w-100 custom-card text-center mb-3 text-decoration-none">
                 <div class="card-body">
-                    <div class="card-title text-success">
-                        <h5 class="mb-0">Autosys Analysis</h5>
+                    <div class="card-title text-dark">
+                        <h5 class="mb-0 fw-semibold">Autosys Analysis</h5>
                     </div>
                     <hr/>
                     <p class="card-text">Analyze the Autosys definitions</p>
