--- a/nexus/src/main/resources/templates/app/user/Login.html
+++ b/nexus/src/main/resources/templates/app/user/Login.html
@@ -16,8 +16,8 @@
 
                     <div class="card w-100 custom-card no-transform-card text-center mb-3">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">Login</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">Login</h5>
                             </div>
                             <hr/>
                             <form action="/AppUser/Login" method="post">
