--- a/nexus/src/main/resources/templates/app/autosys/AutosysDefinitionUploadForm.html
+++ b/nexus/src/main/resources/templates/app/autosys/AutosysDefinitionUploadForm.html
@@ -17,8 +17,8 @@
 
                     <div class="card w-100 custom-card no-transform-card text-center mb-3">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">Autosys Definition</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">Autosys Definition</h5>
                             </div>
                             <hr/>
                             <form action="/Autosys/UploadDefinitionFile" method="post" enctype="multipart/form-data">
