--- a/nexus/src/main/resources/templates/app/autosys/Landing.html
+++ b/nexus/src/main/resources/templates/app/autosys/Landing.html
@@ -11,7 +11,7 @@
         <div class="col-10 d-flex justify-content-center">
             <div class="custom-container">
                 <div class="card-header custom-card-header text-white">
-                    <h5 class="mb-0">Autosys Definitions</h5>
+                    <h5 class="mb-0 fw-semibold">Autosys Definitions</h5>
                 </div>
                 <table class="table">
                     <thead>
