--- a/nexus/src/main/resources/templates/app/topology/Landing.html
+++ b/nexus/src/main/resources/templates/app/topology/Landing.html
@@ -6,6 +6,13 @@
 
         body {
              overflow-x: hidden;
+             font-family: sans-serif;
+         }
+
+         h5{
+            font-family: trebuchet ms, sans-serif;
+            font-size: 1.1rem;
+            transition: color 0.3s ease;
          }
 
          .custom-card {
@@ -55,8 +62,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">DRS</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -81,8 +88,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">Refdata Service</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">Refdata Service</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -107,8 +114,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">Instrument Service</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">Instrument Service</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -133,8 +140,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">Rushmore</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">Rushmore</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -161,8 +168,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">DRS</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -186,8 +193,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">DRS</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -211,8 +218,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">DRS</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -236,8 +243,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">DRS</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -264,8 +271,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">DRS</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -289,8 +296,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">DRS</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -314,8 +321,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">DRS</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -339,8 +346,8 @@
                     <div
                             class="card w-100 custom-card text-center mb-3 text-decoration-none">
                         <div class="card-body">
-                            <div class="card-title text-success">
-                                <h5 class="mb-0">DRS</h5>
+                            <div class="card-title text-dark">
+                                <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
                             <table class="table">
@@ -363,18 +370,21 @@
 
 
         </div>
-        <div id="sideId" class="col-2 align-self-start">
-            <div class="card w-100 custom-card text-center mb-1 text-decoration-none">
-                <div class="card-body">
-                    <div class="card-title text-success">
-                        <h5 class="mb-0">Work in Progress</h5>
-                    </div>
-                </div>
-            </div>
+        <div id="sideId" class="col-3 align-self-start">
+            <h5 class="fw-semibold text-center">Details</h5>
+            <hr/>
+            <table class="table table-sm text-center">
+                <tbody>
+                <tr>
+                    <td>Started</td>
+                    <td>2025-05-24</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
 
-        </div>
     </div>
+</div>
 
 
 </div>
@@ -382,7 +392,7 @@
 <script>
     $(document).ready(function () {
         $(".card").on("click", function () {
-            $("#mainId").removeClass("col-12").addClass("col-10 custom-border");
+            $("#mainId").removeClass("col-12").addClass("col-9 custom-border");
             $("#sideId").addClass("show");
         });
 });
