--- a/nexus/src/main/resources/templates/layout/AppLayout.html
+++ b/nexus/src/main/resources/templates/layout/AppLayout.html
@@ -29,7 +29,17 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Link
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="navbar-nav justify-content-end">
                     <li th:if="${sessionUser != null}" class="nav-item">
@@ -37,16 +47,12 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav justify-content-end">
-
                     <li th:if="${sessionUser != null}" class="nav-item">
                         <a class="nav-link" href="/AppUser/Logout">Logout</a>
                     </li>
-
                     <li th:if="${sessionUser == null}" class="nav-item">
                         <a class="nav-link" href="/AppUser/LoginForm">Login</a>
                     </li>
-
-
                 </ul>
 
             </div>
