--- a/nexus/src/main/resources/templates/app/topology/Landing.html
+++ b/nexus/src/main/resources/templates/app/topology/Landing.html
@@ -66,15 +66,19 @@
                                 <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -92,15 +96,19 @@
                                 <h5 class="mb-0 fw-semibold">Refdata Service</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -118,15 +126,19 @@
                                 <h5 class="mb-0 fw-semibold">Instrument Service</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -144,15 +156,19 @@
                                 <h5 class="mb-0 fw-semibold">Rushmore</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -172,15 +188,19 @@
                                 <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -197,15 +217,19 @@
                                 <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -222,15 +246,19 @@
                                 <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -247,15 +275,19 @@
                                 <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -275,15 +307,19 @@
                                 <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -300,15 +336,19 @@
                                 <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -325,15 +365,19 @@
                                 <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -350,15 +394,19 @@
                                 <h5 class="mb-0 fw-semibold">DRS</h5>
                             </div>
                             <hr/>
-                            <table class="table">
+                            <table class="table table-sm">
                                 <tbody>
-                                <tr>
-                                    <td>Started Date</td>
-                                    <td>2025-05-01</td>
+                                <tr scope="row">
+                                    <td>DEV</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
                                 </tr>
-                                <tr>
-                                    <td>Previous Date</td>
-                                    <td>2025-04-30</td>
+                                <tr scope="row">
+                                    <td>SIT</td>
+                                    <td><span class="badge text-bg-success">ON</span></td>
+                                </tr>
+                                <tr scope="row">
+                                    <td>UAT</td>
+                                    <td><span class="badge text-bg-danger">OFF</span></td>
                                 </tr>
                                 </tbody>
                             </table>
@@ -375,7 +423,7 @@
             <hr/>
             <table class="table table-sm text-center">
                 <tbody>
-                <tr>
+                <tr scope="row">
                     <td>Started</td>
                     <td>2025-05-24</td>
                 </tr>
