--- a/nexus/src/main/resources/templates/app/user/List.html
+++ b/nexus/src/main/resources/templates/app/user/List.html
@@ -31,7 +31,7 @@
 
             <table class="card-body table-sm mb-0">
                 <thead>
-                <tr>
+                <tr scope="row">
                     <th scope="col">Id</th>
                     <th scope="col">User Name</th>
                     <th scope="col">Email</th>
