--- a/nexus/src/main/resources/templates/app/SuperAdmin.html
+++ b/nexus/src/main/resources/templates/app/SuperAdmin.html
@@ -87,7 +87,7 @@
                         <div class="card border-secondary">
                             <table class="table table-sm table-bordered">
                                 <thead>
-                                <tr>
+                                <tr scope="row">
                                     <th scope="col">#</th>
                                     <th scope="col">First</th>
                                     <th scope="col">Last</th>
@@ -95,19 +95,19 @@
                                 </tr>
                                 </thead>
                                 <tbody>
-                                <tr>
+                                <tr scope="row">
                                     <th scope="row">1</th>
                                     <td>Mark</td>
                                     <td>Otto</td>
                                     <td>@mdo</td>
                                 </tr>
-                                <tr>
+                                <tr scope="row">
                                     <th scope="row">2</th>
                                     <td>Jacob</td>
                                     <td>Thornton</td>
                                     <td>@fat</td>
                                 </tr>
-                                <tr>
+                                <tr scope="row">
                                     <th scope="row">3</th>
                                     <td colspan="2">Larry the Bird</td>
                                     <td>@twitter</td>
