--- a/nexus/src/main/resources/templates/app/autosys/Landing.html
+++ b/nexus/src/main/resources/templates/app/autosys/Landing.html
@@ -13,9 +13,9 @@
                 <div class="card-header custom-card-header text-white">
                     <h5 class="mb-0 fw-semibold">Autosys Definitions</h5>
                 </div>
-                <table class="table">
+                <table class="table table-sm">
                     <thead>
-                    <tr>
+                    <tr scope="row">
                         <th scope="col">#</th>
                         <th scope="col">File Name</th>
                         <th scope="col">Number of Jobs</th>
@@ -23,19 +23,19 @@
                     </tr>
                     </thead>
                     <tbody>
-                    <tr>
+                    <tr scope="row">
                         <th scope="row">1</th>
                         <td>Mark</td>
                         <td>Otto</td>
                         <td>@mdo</td>
                     </tr>
-                    <tr>
+                    <tr scope="row">
                         <th scope="row">2</th>
                         <td>Jacob</td>
                         <td>Thornton</td>
                         <td>@fat</td>
                     </tr>
-                    <tr>
+                    <tr scope="row">
                         <th scope="row">3</th>
                         <td colspan="2">Larry the Bird</td>
                         <td>@twitter</td>
