--- a/nexus/src/main/resources/templates/layout/AppLayout.html
+++ b/nexus/src/main/resources/templates/layout/AppLayout.html
@@ -7,12 +7,13 @@
         <meta charset="UTF-8"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.min.css"/>
-        <link rel="stylesheet" href="/webjars/font-awesome/4.7.0/css/font-awesome.min.css"/>
+        <link rel="stylesheet" href="/webjars/font-awesome/6.4.0/css/all.min.css"/>
         <link th:href="@{/css/app.css}" rel="stylesheet"/>
 
         <script type="text/javascript" src="/webjars/jquery/3.5.1/jquery.min.js"></script>
         <script type="text/javascript" src="/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
         <script type="text/javascript" src="/webjars/d3js/5.16.0/d3.min.js"></script>
+        <script type="text/javascript" th:src="@{/js/app.js}"></script>
     </head>
 </div>
 
@@ -34,7 +35,8 @@
                     <li th:if="${sessionUser != null}" class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                            data-bs-toggle="dropdown" aria-expanded="false">
-                            <span th:text="${sessionUser.userName}"></span>
+                            <i class="fa-solid fa-circle-user me-1"></i>
+                            <span th:text="${sessionUser.screenName}"></span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="/Admin/Landing">Admin</a></li>
@@ -42,16 +44,16 @@
                             <li>
                                 <hr class="dropdown-divider">
                             </li>
-                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                        </ul>
-                    </li>
+                            <li th:if="${sessionUser != null}" class="nav-item">
+                                <a class="dropdown-item" href="/AppUser/Logout">Logout</a>
+                            </li>
 
-                    <li th:if="${sessionUser != null}" class="nav-item">
-                        <a class="nav-link" href="/AppUser/Logout">Logout</a>
+                        </ul>
                     </li>
                     <li th:if="${sessionUser == null}" class="nav-item">
                         <a class="nav-link" href="/AppUser/LoginForm">Login</a>
                     </li>
+
                 </ul>
 
             </div>
@@ -60,23 +62,32 @@
 
     <div style="display:block; width:100%; height:5em; padding-top:0.3em; padding-bottom:0.5em;">
         <center>
-            <span th:if="${errorMsg != null}">
-                <div id="errorMsgId" class="alert  alert-danger" role="alert" style="width: 60%;">
-                    <span th:text="${errorMsg}"/>
-                </div>
-            </span>
-            <span th:if="${warnMsg != null}">
-                <div id="warnMsgId" class="alert alert-warning" role="alert" style="width: 60%;">
-                    <span th:text="${warnMsg}"/>
-                </div>
-            </span>
-            <span th:if="${actionMsg != null}">
-                <div id="actionMsgId" class="alert alert-success" role="alert" style="width: 60%;">
-                    <span th:text="${actionMsg}"/>
-                </div>
-            </span>
+            <div id="errorMsgId" class="alert alert-danger" role="alert" style="width: 60%; display: none;">
+                <div th:if="${errorMsg != null}"><span th:text="${errorMsg}"/></div>
+            </div>
+            <div id="warnMsgId" class="alert alert-warning" role="alert" style="width: 60%; display: none;">
+                <div th:if="${warnMsg != null}"><span th:text="${warnMsg}"/></div>
+            </div>
+            <div id="actionMsgId" class="alert alert-success" role="alert" style="width: 60%; display: none;">
+                <div th:if="${actionMsg != null}"><span th:text="${actionMsg}"/></div>
+            </div>
         </center>
     </div>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            if ($('#errorMsgId').text().trim() !== '') {
+                $('#errorMsgId').show().delay(5000).fadeOut();
+            }
+            if ($('#warnMsgId').text().trim() !== '') {
+                $('#warnMsgId').show().delay(5000).fadeOut();
+            }
+            if ($('#actionMsgId').text().trim() !== '') {
+                $('#actionMsgId').show().delay(5000).fadeOut();
+            }
+        });
+
+    </script>
 
     <div th:if="${breadcrumbs != null and !#lists.isEmpty(breadcrumbs)}">
         <div class="d-flex footer-breadcrumb p-2 justify-content-end"
